k8s/deployment.yaml
# Copyright 2024 Robert Cronin
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-robertcronin-com
  template:
    metadata:
      labels:
        app: blog-robertcronin-com
    spec:
      containers:
      - name: robertcronin-com
        image: robertcronin/robertcronin.com:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  selector:
    app: blog-robertcronin-com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  ingressClassName: istio
  rules:
  - host: blog.robertcronin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-robertcronin-com
            port:
              number: 80
